--- a/src/components/SectionTitle.astro
+++ b/src/components/SectionTitle.astro
@@ -6,4 +6,4 @@ interface Props {
 const { title } = Astro.props
 ---
 
-<h3 id={title.toLowerCase()} class="text-base text-l/primary dark:text-d/primary">{title}</h3>
+<h3 id={title.toLowerCase()} class="text-lg font-bold text-l/primary dark:text-d/primary">{title}</h3>
