--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,18 +3,18 @@ import { persona } from "../persona";
 import Link from "./Link.astro";
 ---
 
-<footer>
-  <h3 class="text-l/primary dark:text-d/primary">Reach out</h3>
-  <p class="text-sm text-l/tertiary dark:text-d/tertiary">
-    drop me a line: 
-    <Link target="_self" title={persona.email} url={`mailto:${persona.email}`} />
-    </p>
-  <p class="w-full">
+<footer class="bg-l/primary dark:bg-d/secondary p-3">
+  <h3 class="text-l/bg dark:text-d/secondary w-fit py-1 px-3 bg-l/secondary dark:bg-d/tertiary text-xl font-bold mb-2">Discutons</h3>
+  <p class="text-l/bg dark:text-d/tertiary">
+    tu peux m'envoyer un fax :
+    <Link target="_self" title={persona.email.replace('@','[@]')} url={`mailto:${persona.email}`} />
+  </p>
+  <p class="w-full dark:text-d/tertiary text-l/bg ">
+    ou me faire vibrer sur les réseaux :
     {
       persona.contacts.map((c) => (
-      <span class="text-l/tertiary dark:text-d/tertiary after:content-[',_'] last:after:content-none"><Link target="_blank" title={c.title} url={c.url} /></span>
+      <span class="text-l/tertiary dark:text-d/tertiary after:content-['_−_'] last:after:content-none uppercase"><Link target="_blank" title={c.title} url={c.url} /></span>
       ))
     }
   </p>
-  
 </footer>
