--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,7 +8,6 @@ const { title, description } = Astro.props
 ---
 
 <header>
-    <h1 class="text-base text-l/primary dark:text-d/primary">{title}</h1>
+    <h1 class="text-2xl font-black text-l/primary dark:text-d/primary">{title}</h1>
     <p class="text-sm text-l/tertiary dark:text-d/tertiary">{description}</p>
-  
 </header>
