--- a/src/components/Story.astro
+++ b/src/components/Story.astro
@@ -1,9 +1,18 @@
 ---
-interface Props {
-    story:string
-}
 
-const { story } = Astro.props
----
-
-<article class="text-base text-l/secondary dark:text-d/secondary">{story}</article>
+import Link from "./Link.astro";---
+<article class="text-base text-l/secondary dark:text-d/primary">
+	<p>
+		<b class="text-2xl font-bold">2024!</b> C'est l'heure de refondre ce site internet. 15ans que j'évolue en tant que
+		développeur freelance, il serait temps de passer du "cordonnier mal chaussé" à autre chose.
+		<i class="dark:text-d/secondary">Peut-être une jolie paire de chaussures minimalistes ?</i>
+	</p>
+	<p class="mt-2">
+		MarvinL.com ne te dit surement pas grand chose, mais tu connais peut-être la
+		facette <Link title="@macojaune" url="https://macojaune.com" target="_blank"/> des réseaux sociaux.
+	</p>
+	<p>
+		Disons que MarvinL.com c’est l'entité officielle de mon activité. <br>
+		Je suis Développeur Web Fullstack, entrepreneur et <u>surtout</u> <i>Passionné</i>.
+	</p>
+</article>
