--- a/src/components/Story.astro
+++ b/src/components/Story.astro
@@ -15,4 +15,9 @@ import Link from "./Link.astro";---
 		Disons que MarvinL.com c’est l'entité officielle de mon activité. <br>
 		Je suis Développeur Web Fullstack, entrepreneur et <u>surtout</u> <i>Passionné</i>.
 	</p>
+	<p>
+		Passionné de mode sombre et de textes colorés qui défilent…
+		Je vis la nuit et me prélasse la journée, un mode de vie complètement à l'opposé de ce qu'attendaient mes derniers patrons.
+		<br>J'aime créer,résoudre les problèmes,tester des idées saugrenues…
+	</p>
 </article>
