--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,16 +1,26 @@
 ---
 import { nav } from "../nav";
 import Link from "./Link.astro";
-const current = Astro.url.pathname
+const current = Astro.url.pathname;
 
-const isActive = (n:{url:string})=>{
-	if(n.url==="/" && current==="/")
-		return true
-	return n.url !== "/" && current.startsWith(n.url);
-
-}
+const isActive = (n: { url: string }) => {
+  if (n.url === "/" && current === "/") return true;
+  return n.url !== "/" && current.startsWith(n.url);
+};
 ---
-<nav class="w-full flex justify-start gap-2">
-    {nav.map((n) => (!isActive(n) ?<Link target="_self" title={n.title} url={n.url} />:<span class="dark:text-d/primary text-sm underline underline-offset-8">{n.title}</span>
-    ))}
+
+<nav class="flex w-full justify-start gap-2">
+  {
+    nav.map((n) =>
+      !isActive(n) ? (
+        <Link target="_self" url={n.url} noDecorate>
+          {n.title}
+        </Link>
+      ) : (
+        <span class="text-sm underline underline-offset-8 dark:text-d/primary">
+          {n.title}
+        </span>
+      ),
+    )
+  }
 </nav>
