--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -1,10 +1,30 @@
 ---
 interface Props {
-    title: string;
-    url: string;
-    target: string;
+  url: string;
+  target: string;
+  noDecorate?: boolean;
+  invert?: boolean;
 }
 
-const { title, url, target} = Astro.props
+const { url, target, noDecorate = false, invert = false } = Astro.props;
 ---
-<a class="text-sm text-l/tertiary dark:text-d/primary hover:text-l/bg dark:hover:text-d/secondary dark:hover:bg-d/tertiary hover:bg-l/tertiary active:text-l/primary dark:active:text-d/primary focus:text-l/primary dark:focus:text-d/primary focus-visible:text-l/primary dark:focus-visible:text-d/primary outline-none" href={url} target={target}>{title}</a>
+
+<a
+  class:list={[
+    "inline-flex w-fit items-center gap-x-1 text-sm  outline-none focus:text-l/primary" +
+      " focus-visible:text-l/primary active:text-l/primary dark:text-d/primary dark:hover:bg-d/tertiary" +
+      " dark:hover:text-d/secondary dark:focus:text-d/primary dark:focus-visible:text-d/primary" +
+      " dark:active:text-d/primary",
+    invert
+      ? "text-l/bg hover:bg-l/tertiary hover:text-l/bg"
+      : "text-l/tertiary  hover:bg-l/tertiary" + " hover:text-l/bg",
+    !noDecorate && invert && "decoration-l/tertiary",
+    !noDecorate && "underline decoration-l/primary dark:decoration-d/tertiary",
+  ]}
+  href={url}
+  target={target}
+>
+  <slot name="before" />
+  <slot />
+  <slot name="after" />
+</a>
