--- a/src/components/ListItem.astro
+++ b/src/components/ListItem.astro
@@ -1,33 +1,49 @@
 ---
 interface Props {
 	title: string;
-	desc: string;
+	desc?: string;
 	url?: string;
+	isProject?: boolean
+	date?: string
 }
 
-const {title, desc, url} = Astro.props;
+const {title, desc, url, isProject = false, date} = Astro.props;
+const createdAt = new Date(date)
 ---
 
-<p class="w-full flex justify-start items-start text-base">
+<li class="flex items-start justify-start text-base pl-3">
 	{
 		url ? (
-				<a href={url} class="group focus-visible:bg-l/primary dark:focus-visible:bg-d/primary focus-visible:text-l/primary dark:focus-visible:text-d/primary outline-none focus-visible:after:text-l/primary dark:focus-visible:after:text-d/primary
-      hover:bg-l/primary dark:hover:bg-d/tertiary hover:text-l/primary dark:hover:text-d/primary hover:after:text-l/primary dark:hover:after:text-d/primary">
-        <span class=
-                "font-bold text-l/secondary dark:text-d/secondary group-focus-visible:text-d/primary dark:group-focus-visible:text-l/primary
-        dark:group-hover:text-d/primary group-hover:text-l/bg">{title}</span>
-					<span class="text-l/tertiary dark:text-d/tertiary dark:group-hover:text-d/primary"> — </span>
-					<span class=
-					        "text-l/tertiary italic dark:text-d/tertiary dark:group-hover:text-d/primary">{desc}</span>
+				<a
+						href={url}
+						class="group outline-none hover:bg-l/primary hover:text-l/primary hover:after:text-l/primary focus-visible:bg-l/primary focus-visible:text-l/primary focus-visible:after:text-l/primary
+      dark:hover:bg-d/tertiary dark:hover:text-d/primary dark:hover:after:text-d/primary dark:focus-visible:bg-d/primary dark:focus-visible:text-d/primary dark:focus-visible:after:text-d/primary"
+				>
+        <span
+		        class="font-bold text-l/secondary group-hover:text-l/bg group-focus-visible:text-d/primary dark:text-d/primary
+        dark:group-hover:text-d/primary dark:group-focus-visible:text-l/primary"
+        >
+          {title}
+        </span>
+					{(desc||createdAt) &&
+					  (<span class="text-l/tertiary dark:text-d/tertiary dark:group-hover:text-d/primary">
+            —
+          </span>
+							  <span class="italic text-l/tertiary dark:text-d/tertiary dark:group-hover:text-d/primary">
+								  {desc} {date&&<small class="dark:text-d/primary text-l/secondary">{createdAt.toLocaleDateString("fr-FR",{ month:"2-digit", year:"numeric"})}</small>}
+          </span>)}
 				</a>
 		) : (
-				<>
-        <span class=
-                "text-l/secondary dark:text-d/secondary focus">{title}</span>
-					<span class="text-l/tertiary dark:text-d/tertiary"> — </span>
-					<span class=
-					        "text-l/tertiary italic dark:text-d/tertiary">{desc}</span>
-				</>
+				<> <span class:list={["focus text-l/secondary dark:text-d/secondary", isProject &&
+				"font-bold text-l/secondary group-hover:text-l/bg group-focus-visible:text-d/primary" +
+				" dark:text-d/secondary dark:group-hover:text-d/primary dark:group-focus-visible:text-l/primary"]}>
+          {title}
+        </span>
+					{desc && (<span class="text-l/tertiary dark:text-d/tertiary"> — </span>
+							<span class="italic text-l/tertiary dark:text-d/tertiary">
+            {desc}
+          </span>)
+					}</>
 		)
 	}
-</p>
+</li>
