--- a/src/layouts/ContentLayout.astro
+++ b/src/layouts/ContentLayout.astro
@@ -1,4 +1,5 @@
 ---
+import Section from "../components/Section.astro";
 interface Props {
   title: string;
   desc: string;
@@ -6,17 +7,33 @@ interface Props {
 
 const { title, desc } = Astro.props;
 import Navigation from "../components/Navigation.astro";
-import Footer from "../components/Footer.astro";
-import {ViewTransitions}from 'astro:transitions'
+import { ViewTransitions } from "astro:transitions";
+import ContentFooter from "../components/ContentFooter.astro";
 ---
 
 <!doctype html>
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/site.webmanifest" />
     <meta name="generator" content={Astro.generator} />
     <meta name="description" content={desc} />
 
@@ -32,15 +49,15 @@ import {ViewTransitions}from 'astro:transitions'
     <title>{title}</title>
     <ViewTransitions />
   </head>
-  <body class="bg-l/bg dark:bg-d/bg antialiased w-full h-full p-4 md:p-0">
+  <body class="h-full w-full bg-l/bg p-4 antialiased dark:bg-d/bg md:p-0">
     <div
-      class="w-full m-auto max-w-xl min-h-screen flex flex-col justify-center items-start gap-8"
+      class="m-auto flex min-h-screen w-full max-w-xl flex-col items-start justify-center gap-8"
     >
       <Navigation />
-      <main class="space-y-4">
+      <main class="mb-4 space-y-4">
         <slot />
       </main>
-      <!--<Footer />-->
+      <!--<ContentFooter />-->
     </div>
   </body>
 </html>
