--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,17 +1,22 @@
 ---
-import { getCollection } from 'astro:content';
+import { getCollection } from "astro:content";
 import Layout from "../../layouts/Layout.astro";
+import ContentLayout from "../../layouts/ContentLayout.astro";
 // 1. Generate a new path for every collection entry
 export async function getStaticPaths() {
- const blogEntries = await getCollection('blog');
- return blogEntries.map(entry => ({
-   params: { slug: entry.slug }, props: { entry },
- }));
+  const blogEntries = await getCollection("blog", ({ data }) => {
+    return import.meta.env.PROD ? data.isDraft !== true : true;
+  });
+  return blogEntries.map((entry) => ({
+    params: { slug: entry.slug },
+    props: { entry },
+  }));
 }
 // 2. For your template, you can get the entry directly from the prop
 const { entry } = Astro.props;
 const { Content } = await entry.render();
 ---
-<Layout title={entry.data.title} desc={entry.data.description}>
-<Content/>
-</Layout>
+
+<ContentLayout title={entry.data.title} desc={entry.data.description}>
+  <Content />
+</ContentLayout>
