--- a/src/pages/projets/index.astro
+++ b/src/pages/projets/index.astro
@@ -1,30 +1,52 @@
 ---
-import {getCollection} from "astro:content";
+import { getCollection } from "astro:content";
 import List from "../../components/List.astro";
 import ListItem from "../../components/ListItem.astro";
-import Layout from "../../layouts/Layout.astro";
 import SectionTitle from "../../components/SectionTitle.astro";
 import Section from "../../components/Section.astro";
-import {group} from "radash";
-const clientProjects = await getCollection('project', ({data}) => data.isClient);
-const myProjects = await getCollection('project', ({data}) => !data.isClient);
+import ContentLayout from "../../layouts/ContentLayout.astro";
+import { persona } from "../../persona";
+import ContentFooter from "../../components/ContentFooter.astro";
+const clientProjects = await getCollection("project", ({ data }) => {
+  if (data.isClient === true)
+    return import.meta.env.PROD ? data.isDraft !== true : true;
+});
+const myProjects = await getCollection("project", ({ data }) => {
+  if (data.isClient === false)
+    return import.meta.env.PROD ? data.isDraft !== true : true;
+});
 ---
 
-<Layout>
-	<Section>
-		<SectionTitle title="Projets Clients"/>
-		<List>
-			{clientProjects.map(cp =>
-					<ListItem title={cp.data.title} desc={cp.data.description} url={`/projet/${cp.slug}`}/>
-			)}
-		</List>
-	</Section>
-	<Section>
-		<SectionTitle title="Mes projets"/>
-		<List>
-			{myProjects.map(cp =>
-					<ListItem title={cp.data.title} desc={cp.data.description} url={`/projet/${cp.slug}`}/>
-			)}
-		</List>
-	</Section>
-</Layout>
+<ContentLayout title="Mes projets − MarvinL.com" desc={persona.seo.projectDesc}>
+  <Section>
+    <SectionTitle title="Projets Clients" />
+    <List>
+      {
+        clientProjects.map((cp) => (
+          <ListItem
+            title={cp.data.title}
+            desc={cp.data.description}
+            date={cp.data.createdAt}
+            url={`/projets/${cp.slug}`}
+          />
+        ))
+      }
+    </List>
+  </Section>
+  <Section>
+    <SectionTitle title="Mes projets" />
+    <List>
+      {
+        myProjects.map((cp) => (
+          <ListItem
+            title={cp.data.title}
+            desc={cp.data.description}
+            date={cp.data.createdAt}
+            url={`/projets/${cp.slug}`}
+          />
+        ))
+      }
+    </List>
+  </Section>
+  <ContentFooter isRoot />
+</ContentLayout>
