--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,8 +10,12 @@ import Story from "../components/Story.astro";
 import { getCollection } from "astro:content";
 import Link from "../components/Link.astro";
 // Resolve an array of references
-const projects = await getCollection("project");
-const articles = await getCollection("blog");
+const projects = await getCollection("project", ({ data }) =>
+  import.meta.env.PROD ? data.isDraft !== true : true,
+);
+const articles = await getCollection("blog", ({ data }) =>
+  import.meta.env.PROD ? data.isDraft !== true : true,
+);
 ---
 
 <Layout title={persona.firstName} desc={persona.description}>
