--- a/src/components/SectionTitle.astro
+++ b/src/components/SectionTitle.astro
@@ -1,9 +1,13 @@
 ---
 interface Props {
-    title: string
+  title: string;
+  As?: string;
 }
 
-const { title } = Astro.props
+const { title, As = "h3" } = Astro.props;
 ---
 
-<h3 id={title.toLowerCase()} class="text-lg font-bold text-l/primary dark:text-d/primary">{title}</h3>
+<As
+  id={title.toLowerCase()}
+  class="text-lg font-bold text-l/primary dark:text-d/primary">{title}</As
+>
