hide blog for now

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -62,7 +62,7 @@ const articles = await getCollection("blog", ({ data }) =>
     ) : null
   }
   {
-    articles ? (
+    articles.length > 0 ? (
       <Section>
         <SectionTitle As="h2" title="Articles" />
         <List>
